--- a/users/templates/Receipt.html
+++ b/users/templates/Receipt.html
@@ -35,6 +35,7 @@
                                         <tr>
                                             <th class="text-left">ID</th>
                                             <th>Customer</th>
+                                            <th>Phone</th>
                                             <th>MeterNUmber</th>
                                             <th>Amount</th>
                                             <th>Littre</th>
@@ -50,6 +51,7 @@
                                     <tr>
                                             <td><a class="btn-link" href="#">{{history.id}}</a></td>
                                             <td>{{history.Meternumber.customer.FirstName}} {{history.Meternumber.customer.LastName}}</td>
+                                            <td>{{history.Meternumber.customer.user.phone}}</td>
                                             <td>{{history.Meternumber}}</td>
                                             <td>{{history.Amount}} Rwf</td>
                                             <td>{{history.Amount}}Ltr</td>
