--- a/users/templates/website/index.html
+++ b/users/templates/website/index.html
@@ -150,36 +150,6 @@
 								<div class="wrap mcb-wrap mcb-wrap-50t7e6zdb one-third valign-top move-up clearfix" style="padding:0 2%;margin-top:-240px" data-mobile="no-up">
 									
 								</div>
-								
-
-						<div class="section mcb-section mcb-section-j86v4pr9v equal-height-wrap" style="padding-bottom:80px">
-							<div class="section_wrapper mcb-section-inner">
-								<div class="wrap mcb-wrap mcb-wrap-63op8ggq1 one-second valign-middle bg-cover clearfix" >
-									<div class="mcb-wrap-inner">
-										<div class="column mcb-column mcb-item-e5wsltbix one column_image">
-											<div class="image_frame image_item no_link scale-with-grid no_border">
-												<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/scooterrental-home-pic1.jpg" %}" alt="scooterrental-home-pic1" title width="780" height="761"> </div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="wrap mcb-wrap mcb-wrap-iwmqovrrv one-second valign-top clearfix" style="padding:0 0 0 5%">
-									<div class="mcb-wrap-inner">
-										<div class="column mcb-column mcb-item-cm3u5yafs one column_column column-margin-20px">
-											<div class="column_attr clearfix" ><br><br>
-												<h6><span style="font-size:18px;color:#009cde;margin-right:10px;">●</span>Water Access Rwanda</h6>
-												<hr class="no_line" style="margin:0 auto 10px">
-												<h2><span style="color:#009cde;">About Us</span></h2>
-												<hr class="no_line" style="margin:0 auto 10px">
-												<h5>We are a social enterprise committed to increasing access to clean and safe water for all people starting in Rwanda. Through a set of unique solutions designed for households, communities, private businesses and farms; we make sure your water is affordable, reliable and always safe.</h5>
-												<hr class="no_line" style="margin:0 auto 10px">
-											</div>
-										</div>
-										<div class="column mcb-column mcb-item-z22mf0xsu one column_button"> <a class="button button_size_2 button_theme" href="{% url 'rainwater' %}"><span class="button_label">Read More</h6></span></a> </div>
-									</div>
-								</div>
-							</div>
-						</div>
 
 						<div class="section mcb-section mcb-section-gzlmntrq6">
 							<div class="section_wrapper mcb-section-inner">
@@ -243,8 +213,8 @@
 			</div>
 		</div>
 
-		<div class="section mcb-section mcb-section-9e98f0fdc equal-height-wrap" style="padding-bottom:100px">
 		     <h2 class="themecolor" style="text-align: center;">OUR PARTNER</h2>
+		<div class="section mcb-section mcb-section-9e98f0fdc equal-height-wrap" style="padding-bottom:100px;padding-left:200px;">
 							<div class="section_wrapper mcb-section-inner">
 								<div class="wrap mcb-wrap mcb-wrap-0e4f0a448 one-second valign-middle clearfix" >
 									<div class="mcb-wrap-inner">
@@ -255,7 +225,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="wrap mcb-wrap mcb-wrap-0e4f0a448 one-second valign-middle clearfix">
+								<div class="wrap mcb-wrap mcb-wrap-0e4f0a448 one-second valign-middle clearfix" style="padding-right:200px;">
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-b6e2ae677 one column_image">
 											<div class="image_frame image_item no_link scale-with-grid no_border">
