--- a/users/templates/website/index.html
+++ b/users/templates/website/index.html
@@ -72,7 +72,7 @@
 											<li> <a href="{% url 'blog' %}"><span>Blog</span></a> </li>
 											<li> <a href="{% url 'contact_us' %}"><span>Contact</span></a> </li>
 										</ul>
-									</nav><a class="responsive-menu-toggle " href="#"><i class="icon-menu-fine"></i></a> </div>
+									</nav><a class="responsive-menu-toggle " href="#"><i class="fa fa-bars" ></i></a> </div>
 							</div>
 							<div class="top_bar_right">
 								<div class="top_bar_right_wrapper"> <a href="{% url 'shopping' %}" class="action_button" >SHOP</a> </div>
@@ -95,18 +95,17 @@
 
 												<div class="wrap mcb-wrap mcb-wrap-2/3 one-second valign-top clearfix" style="padding:0 3%">
 													<div style="height: 500px;width: 550px;background:black;border-top-left-radius:100px;border-top-right-radius:30px;border-bottom-right-radius:100px;border-bottom-left-radius:30px ;font-family:Poppins;color:white;text-align:center;font-size:40px;font-weight:bold;padding-top:100px" >
-													<span>Clean safe</span>	 <span style="color:#009cde">Water</span>
+													<span>Rain</span><span style="color:#00b4e3">Water</span>
+														<br><br>
+														is Safe  Water
 														<br>
 														<br>
-														Simple, Affordable 
-														<br>
-														<br>
-														 and Reliable Access
+														
 														 <br>
 														 <br>
 
-													<div style="display:inline-block;height:48px;width:170px;margin-top:150px;background-image:url({% static 'web/images/scooterrental-slider-pic2.png' %})"></div>
-													<div style="display:inline-block;height:48px;width:190px;margin-top:150px;background-image:url({% static 'web/images/scooterrental-slider-pic3.png' %})"></div>
+													<div style="display:inline-block;height:48px;width:170px;margin-top:100px;background-image:url({% static 'web/images/scooterrental-slider-pic2.png' %})"></div>
+													<div style="display:inline-block;height:48px;width:190px;margin-top:100px;background-image:url({% static 'web/images/scooterrental-slider-pic3.png' %})"></div>
 													</div>
 												</div>
 
@@ -126,17 +125,69 @@
 							</div>
 						</div>
 						<br><br>
-						<div  id="pricing" style="padding-left:5%;padding-right:5%;margin-top:100px,height:100px">
+						<div class="column_attr clearfix align_center" >
+								<h2><span class="themecolor">
+								BEFORE AND AFTER</span> </h2><br>
+								<h5>we conducted a pilot to see what our system would achieve for our users. Here is what happened and what you can expect.</h5>
+												<hr class="no_line" style="margin:0 auto 20px">
+						</div>
+						<div class="section_wrapper mcb-section-inner">
+								<div class="wrap mcb-wrap mcb-wrap-zk9pzc9s5 one valign-top move-up clearfix" style="margin-top:--120px" data-mobile="no-up">
+									<div class="mcb-wrap-inner">
+										<div class="column mcb-column mcb-item-qyuetn73g one-fourth column_quick_fact">
+											<div class="quick_fact align_ animate-math">
+											<div><img class="scale-with-grid" src="{% static "web/images/money.png" %}" style="width:50px;height:50px"></div>
+											<h4><span class="themecolor">Save Money</span> </h4>												
+											<h5>ALL HOUSEHOLDS reduced their water bill by 58% One family went from RWF 25,000 to Just RWF 6,000!.</h5>
+												<hr class="hr_narrow">
+												<div class="desc"></div>
+											</div>
+										</div>
+										<div class="column mcb-column mcb-item-z73733ieu one-fourth column_quick_fact">
+											<div class="quick_fact align_ animate-math">
+												<div><img class="scale-with-grid" src="{% static "web/images/maledrink.png" %}" style="width:50px;height:50px"> </div>
+											   <h4><span class="themecolor">Trust your water tap</span> </h4>
+												<h5>Savings: 100% of all households were buying their drinking water, after our system 63% had switched to drinking from their taps.</h5>
+												<hr class="hr_narrow">
+												<div class="desc"></div>
+											</div> 
+										</div>
+										<div class="column mcb-column mcb-item-5fltm4adk one-fourth column_quick_fact">
+											<div class="quick_fact align_ animate-math">
+												<div><img class="scale-with-grid" src="{% static "web/images/glass.png" %}" style="width:50px;height:50px"> </div>
+											   <h4><span class="themecolor">Safe and Clean for Drinking</span> </h4> </div>
+												<h5>Before no one trusted drinking rainwater, this number increased to 87% drinking directly from their taps.</h5>
+												<hr class="hr_narrow">
+												<div class="desc"></div>
+											</div>
+										</div>
+										<div class="column mcb-column mcb-item-hfbzurgtu one-fourth column_quick_fact">
+											<div class="quick_fact align_ animate-math">
+												<div><img class="scale-with-grid" src="{% static "web/images/cooking.png" %}" style="width:50px;height:50px"> </div>
+											   <h4><span class="themecolor">Cooking Made Easy</span> </h4> </div>
+												<h5>Only 33% of households trusted their water for cooking, this increased to 100% after the installation of our system.</h5>
+												<hr class="hr_narrow">
+												<div class="desc"></div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="column_attr clearfix align_center" >
+								<h4><span class="themecolor">Start saving today !</span> </h4>
+								</div>
+							</div>
+
+						<div  id="pricing" style="padding-left:5%;padding-right:5%;margin-top:100px,height:100px,background:white">
 							<div class="section_wrapper mcb-section-inner">
-								<div class="wrap mcb-wrap mcb-wrap-ye5cw8npp one scooterrental-wrap-radius valign-top clearfix" style="padding:100px 5% 10px;background-color:#009cde">
+								<div class="wrap mcb-wrap mcb-wrap-ye5cw8npp one scooterrental-wrap-radius valign-top clearfix" style="padding:100px 5% 10px;background-color:white">
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-roiiteb21 one column_column">
 											<div class="column_attr clearfix align_center" >
-											<i class="fa fa-certificate fa-4x" style="color:white"></i>
-												<h2 style="color:#FFF;">1-YEAR WARRANTY ON OUR SYSTEMS
+											<img class="scale-with-grid" src="{% static "web/images/guarantee.png" %}" style="width:50px;height:50px">
+												<h2 style="color:#00b4e3 ;">1-YEAR WARRANTY ON OUR SYSTEMS
 													</h2>
 												<hr class="no_line" style="margin:0 auto 20px">
-												<h5 style="color:#FFF;">6-months payment plans.</h5> 
+												<h5 style="color:#1f1f1f;">6-months payment plans.</h5> 
 												</div>
 										</div>
 									</div>
@@ -144,7 +195,7 @@
 							</div>
 						</div>
 						
-						<div class="section mcb-section mcb-section-bc6nf565c" style="padding-top:120px;padding-bottom:80px">
+						<div class="section mcb-section mcb-section-bc6nf565c" >
 							<div class="section_wrapper mcb-section-inner">
 								
 								<div class="wrap mcb-wrap mcb-wrap-50t7e6zdb one-third valign-top move-up clearfix" style="padding:0 2%;margin-top:-240px" data-mobile="no-up">
@@ -161,7 +212,6 @@
 										<div class="column mcb-column mcb-item-dxbdro427 two-third column_column">
 											<div class="column_attr clearfix align_center" >
 												<h2><span class="themecolor">FAQs</span> </h2>
-												<hr class="no_line" style="margin:0 auto 20px">
 										</div>
 									</div>
 								</div>
@@ -172,7 +222,7 @@
 												<div class="desc_wrapper">
 													<h5 class="title">
 													<b class="themecolor">WHAT IS YOUR RETURN POLICY?</b> <br>
-													All sales are final. But Note that our filtration and pump products come with a standard 1 year manufacture warranty.  We do remain at the client’s disposal to answer any questions and concern after sale beyond the warranty period.</h5> </div>
+													<h5>All sales are final. But Note that our filtration and pump products come with a standard 1 year manufacture warranty.  We do remain at the client’s disposal to answer any questions and concern after sale beyond the warranty period.</h5></h5> </div>
 											</div>
 										</div>
 									</div>
@@ -238,9 +288,40 @@
 						
 			</div>
 
+							<div class="section mcb-section mcb-section-9e98f0fdc equal-height-wrap" style="padding-top:10px;padding-bottom:20px">
 							<div class="section_wrapper mcb-section-inner">
-								<iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d15949.83013529674!2d30.04391877672591!3d-1.971109927007682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d-1.9661556!2d30.054956999999998!4m5!1s0x19dca52779461c61%3A0x65f70c22bc7cde62!2swater%20access%20rwanda!3m2!1d-1.976924!2d30.0527472!5e0!3m2!1sen!2srw!4v1637792183186!5m2!1sen!2srw" width="1500" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+							<div class="wrap mcb-wrap mcb-wrap-0e4f0a448 one-second valign-middle clearfix" style="padding:0 5%">
+									<div class="mcb-wrap-inner">
+										<div class="column mcb-column mcb-item-b6e2ae677 one column_image">
+											<div class="image_frame image_item no_link scale-with-grid no_border">
+												<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/drink.webp" %}" alt="scooterrental-how-pic1" title width="780" height="1137"> </div>
+											</div>
+										</div>
+									</div>
+								</div>
+
+								<div class="wrap mcb-wrap mcb-wrap-2a27884ed one-second valign-middle clearfix">
+									<div class="mcb-wrap-inner">
+										<div class="column mcb-column mcb-item-7e0a6c322 one column_column column-margin-20px">
+											<div class="column_attr clearfix" style>
+												<h2><span class="themecolor">Safety, Comfortable and Impact<span></h2>
+												<h4>With the full Amazi System:</h4>
+												<h5>
+												<li>your family enjoys clean safe water throughout the house.</li>
+												<li>Your rain season water bill reduces (RAINWATER IS FREE WATER)</li>
+												<li>You participate in protecting our environment.</li>
+												</h5>
+												<hr class="no_line" style="margin:0 auto 10px">
+												
+											</div>
+										</div>
+										<div class="column mcb-column mcb-item-48a34pell one column_divider">
+											<hr class="no_line" style="margin:0 auto 40px"> </div>
+									</div>
+								</div>
 							</div>
+						
+						</div>
 						
 
 		<footer id="Footer" class="clearfix ">
@@ -253,7 +334,7 @@
 									<h6 style="color:#7d7d7d">QUICK LINKS</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
 									{% comment %} <p> <a href="{% url 'about' %}"> About us</a> </p> {% endcomment %}
-									<p> <a href="{% url 'service' %}">Service</a> </p>
+									<p> <a href="https://www.warwanda.com/">Service</a> </p>
 									<p> <a href="{% url 'rainwater' %}">Rainwater</a> </p>
 									<p> <a href="{% url 'login' %}">LOGIN</a> </p>
 								</div>
@@ -264,14 +345,13 @@
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h3>Simple, Affordable and Reliable Access to
+									<h3>Rainwater is safe water
 										<br>
-										<span class="themecolor">Clean Safe Water</span></h3>
 									<hr class="no_line" style="margin:0 auto 20px">
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#009cde"></i></a> </p>
+									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00b4e3"></i></a> </p>
 									<hr class="no_line" style="margin:0 auto 80px"> </div>
 							</div>
 						</aside>
@@ -282,10 +362,9 @@
 								<div style="text-align: center;">
 									<h6 style="color:#7d7d7d">Other services</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="{% url 'service' %}">Inuma</a> </p>
-									<p> <a href="{% url 'service' %}">Amazi</a> </p>
-									<p> <a href="{% url 'service' %}">Uhira</a> </p>
-									<p> <a href="{% url 'service' %}">Voma</a> </p>
+									<p ><a href="https://twitter.com/amazirw" style="margin-left:1px;"><i class="fa fa-twitter-square fa-2x" style="color:#00ACEE"></i> Twitter</a> </p>
+									<p><a href="https://web.facebook.com/amazirw?_rdc=1&_rdr" style="margin-left:20px;"><i class="fa fa-facebook-official fa-2x" style="color:#4267B2"></i>  Facebook</a> </p>
+									<p><a href="https://www.instagram.com/amazirw/" style="margin-left:20px;"><i class="fa fa-instagram fa-2x"></i>  Instagram</a> </p>
 								</div>
 							</div>
 						</aside>
@@ -337,7 +416,7 @@
 					spinner: "spinner8",
 					perspective: 600,
 					perspectiveType: "global",
-					spinnerclr: "#009cde",
+					spinnerclr: "#00b4e3",
 					editorheight: "850,768,900,720",
 					responsiveLevels: "1240,1240,778,778",
 					progressBar: {
