--- a/users/templates/website/about.html
+++ b/users/templates/website/about.html
@@ -52,7 +52,7 @@
 											<li> <a href="{% url 'blog' %}"><span>Blog</span></a> </li>
 											<li> <a href="{% url 'contact_us' %}"><span>Contact</span></a> </li>
 										</ul>
-									</nav><a class="responsive-menu-toggle " href="#"><i class="icon-menu-fine"></i></a> </div>
+									</nav><a class="responsive-menu-toggle " href="#"><i class="fa fa-bars" ></i></a> </div>
 							</div>
 							<div class="top_bar_right">
 								<div class="top_bar_right_wrapper"> <a href="{% url 'shopping' %}" class="action_button" >SHOP</a> </div>
@@ -75,7 +75,7 @@
 										</div>
 										<div class="column mcb-column mcb-item-xhgolw32g two-third column_column">
 											<div class="column_attr clearfix align_center" style>
-												<h6 style="color:#FFF;"><span style="font-size:18px;color:#009cde;margin-right:10px;">●</span>ABOUT US</h6>
+												<h6 style="color:#FFF;"><span style="font-size:18px;color:#00b4e3;margin-right:10px;">●</span>ABOUT US</h6>
 												<hr class="no_line" style="margin:0 auto 20px">
 												<h1 style="color:#FFF;">
 													<span class="themecolor">Simple-Affordable-Reliable Water</span></h1>
@@ -98,7 +98,7 @@
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-kkjbgllmo one column_column column-margin-20px">
 											<div class="column_attr clearfix" >
-												<h4><span style="font-size:18px;color:#009cde;margin-right:10px;">●</span>Simple-Affordable-Reliable Water</h4>
+												<h4><span style="font-size:18px;color:#00b4e3;margin-right:10px;">●</span>Simple-Affordable-Reliable Water</h4>
 We are a social enterprise committed to eradicating water scarcity by providing appropriate technologies for durable access to water.
 
 ​
@@ -109,7 +109,7 @@ We are a social enterprise committed to eradicating water scarcity by providing 
 
 <br><br>We offer an attractive portfolio of services and products targeting to service all water-scarce areas we encounter within the available budget.
 												<hr class="no_line" style="margin:0 auto 20px">
-												<h2><span style="color:#009cde;">Our Values</span> </h2>
+												<h2><span style="color:#00b4e3;">Our Values</span> </h2>
 												<hr class="no_line" style="margin:0 auto 10px">
 												</div>
 										</div>
@@ -873,12 +873,12 @@ We are a social enterprise committed to eradicating water scarcity by providing 
 										</div>
 									</div>
 								</div>
-								<div class="wrap mcb-wrap mcb-wrap-ad735ec6b one-fourth column-margin-0px valign-middle clearfix" style="padding:80px 40px 70px;background-color:#009cde">
+								<div class="wrap mcb-wrap mcb-wrap-ad735ec6b one-fourth column-margin-0px valign-middle clearfix" style="padding:80px 40px 70px;background-color:#00b4e3">
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-b51b7edd6 one column_column">
 											<div class="column_attr clearfix" style> <span style="font-size:18px;color:#FFF;margin-right:10px;">●</span><span style="font-size:12px;font-weight:600;color:#FFF;">WATER ACCESS MAP</span>
 												<hr class="no_line" style="margin:0 auto 10px">
-												<h4 style="color:#FFF;">Simple, Affordable and Reliable Access to Clean Safe Water</h4> </div>
+												<h4 style="color:#FFF;">Rainwater is safe water Clean Safe Water</h4> </div>
 										</div>
 										<div class="column mcb-column mcb-item-e6ec46911 one column_divider">
 											<hr class="no_line" style="margin:0 auto 5px"> </div>
@@ -931,7 +931,7 @@ We are a social enterprise committed to eradicating water scarcity by providing 
 						</div>
 						<div class="section mcb-section mcb-section-f698c00f3 full-width bg-cover" style="padding-top:120px;padding-left:5%;padding-right:5%;background-color:#020202" >
 								<div class="section_wrapper mcb-section-inner">
-									<div class="wrap mcb-wrap mcb-wrap-f96ea2ed0 one scooterrental-wrap-radius valign-top bg-cover move-up clearfix" style="padding:100px 15%;background-color:#009cde;margin-top:-320px;background-image:url({% static "web/images/scooterrental-section-bg2.png" %});background-repeat:no-repeat;background-position:left top" data-mobile="no-up">
+									<div class="wrap mcb-wrap mcb-wrap-f96ea2ed0 one scooterrental-wrap-radius valign-top bg-cover move-up clearfix" style="padding:100px 15%;background-color:#00b4e3;margin-top:-320px;background-image:url({% static "web/images/scooterrental-section-bg2.png" %});background-repeat:no-repeat;background-position:left top" data-mobile="no-up">
 										<div class="mcb-wrap-inner">
 											<div class="column mcb-column mcb-item-dbdd0316b one-second column_column">
 												<div class="column_attr clearfix" style="padding:0 10% 0 0;">
@@ -966,7 +966,7 @@ We are a social enterprise committed to eradicating water scarcity by providing 
 									<h6 style="color:#7d7d7d">QUICK LINKS</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
 									{% comment %} <p> <a href="{% url 'about' %}"> About us</a> </p> {% endcomment %}
-									<p> <a href="{% url 'service' %}">Service</a> </p>
+									<p> <a href="https://www.warwanda.com/">Service</a> </p>
 									<p> <a href="{% url 'rainwater' %}">Rainwater</a> </p>
 									<p> <a href="{% url 'login' %}">LOGIN</a> </p>
 								</div>
@@ -977,14 +977,14 @@ We are a social enterprise committed to eradicating water scarcity by providing 
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h3>Simple, Affordable and Reliable Access to
+									<h3>Rainwater is safe water
 										<br>
-										<span class="themecolor">Clean Safe Water</span></h3>
+										 
 									<hr class="no_line" style="margin:0 auto 20px">
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#009cde"></i></a> </p>
+									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00b4e3"></i></a> </p>
 									<hr class="no_line" style="margin:0 auto 80px"> </div>
 							</div>
 						</aside>
@@ -995,10 +995,9 @@ We are a social enterprise committed to eradicating water scarcity by providing 
 								<div style="text-align: center;">
 									<h6 style="color:#7d7d7d">MORE INFO</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="#">Inuma</a> </p>
-									<p> <a href="#">Amazi</a> </p>
-									<p> <a href="#">Uhira</a> </p>
-									<p> <a href="#">Voma</a> </p>
+									<p ><a href="https://twitter.com/amazirw" style="margin-left:1px;"><i class="fa fa-twitter-square fa-2x" style="color:#00ACEE"></i> Twitter</a> </p>
+									<p><a href="https://web.facebook.com/amazirw?_rdc=1&_rdr" style="margin-left:20px;"><i class="fa fa-facebook-official fa-2x" style="color:#4267B2"></i>  Facebook</a> </p>
+									<p><a href="https://www.instagram.com/amazirw/" style="margin-left:20px;"><i class="fa fa-instagram fa-2x"></i>  Instagram</a> </p>
 								</div>
 							</div>
 						</aside>
