--- a/users/templates/website/contact.html
+++ b/users/templates/website/contact.html
@@ -50,7 +50,7 @@
 											<li > <a href="{% url 'blog' %}"><span>Blog</span></a> </li>
 											<li class="current-menu-item"><a href="{% url 'contact_us' %}"><span>Contact</span></a> </li>
 										</ul>
-									</nav><a class="responsive-menu-toggle " href="#"><i class="icon-menu-fine"></i></a> </div>
+									</nav><a class="responsive-menu-toggle " href="#"><i class="fa fa-bars" ></i></a> </div>
 							</div>
 							<div class="top_bar_right">
 								<div class="top_bar_right_wrapper"> <a href="{% url 'shopping' %}" class="action_button" >SHOP</a> </div>
@@ -73,7 +73,7 @@
 										</div>
 										<div class="column mcb-column mcb-item-846a89027 two-third column_column">
 											<div class="column_attr clearfix align_center" style>
-												<h6 style="color:#FFF;"><span style="font-size:18px;color:#009cde;margin-right:10px;">●</span>CONTACT</h6>
+												<h6 style="color:#FFF;"><span style="font-size:18px;color:#00b4e3;margin-right:10px;">●</span>CONTACT</h6>
 												<hr class="no_line" style="margin:0 auto 20px">
 												<h1 style="color:#FFF;">Feel<span class="themecolor"> free </span>to
 													<br>
@@ -101,7 +101,8 @@
 											<div class="column_attr clearfix align_center" style="background-color:#fff;padding:40px 10% 25px;border-radius: 20px; box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.1);">
 												<h3>SEND US A MESSAGE</h3>
 												<div id="contactWrapper">
-													<form id="contactform">
+													<form id="contactform" action="{% url 'contact_us' %}" method="POST">
+													{% csrf_token %}
 														<!-- One Second (1/2) Column -->
 														<div class="column one-second">
 															<input placeholder="Your name" type="text" name="name" id="name" size="40" aria-required="true" aria-invalid="false" /> </div>
@@ -109,12 +110,11 @@
 														<div class="column one-second">
 															<input placeholder="Your e-mail" type="email" name="email" id="email" size="40" aria-required="true" aria-invalid="false" /> </div>
 														<div class="column one">
-															<input placeholder="Subject" type="text" name="subject" id="subject" size="40" aria-invalid="false" /> </div>
-														<div class="column one">
-															<textarea placeholder="Message" name="body" id="body" style="width:100%;" rows="10" aria-invalid="false"></textarea>
+															<textarea placeholder="Message" name="message" id="body" style="width:100%;" rows="10" aria-invalid="false"></textarea><br>
 														</div>
 														<div class="column one">
-															<input type="button" value="Send A Message" id="submit" onClick="return check_values();"> </div>
+															<button class="btn btn-block btn-success" type="submit" style="width:100%;border-radius:20px;">Submit</button>
+														</div>
 													</form>
 												</div>
 											</div>
@@ -137,7 +137,7 @@
 									<h6 style="color:#7d7d7d">QUICK LINKS</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
 									{% comment %} <p> <a href="{% url 'about' %}"> About us</a> </p> {% endcomment %}
-									<p> <a href="{% url 'service' %}">Service</a> </p>
+									<p> <a href="https://www.warwanda.com/">Service</a> </p>
 									<p> <a href="{% url 'rainwater' %}">Rainwater</a> </p>
 									<p> <a href="{% url 'login' %}">LOGIN</a> </p>
 								</div>
@@ -148,14 +148,14 @@
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h3>Simple, Affordable and Reliable Access to
+									<h3>Rainwater is safe water
 										<br>
-										<span class="themecolor">Clean Safe Water</span></h3>
+										 
 									<hr class="no_line" style="margin:0 auto 20px">
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#009cde"></i></a> </p>
+									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00b4e3"></i></a> </p>
 									<hr class="no_line" style="margin:0 auto 80px"> </div>
 							</div>
 						</aside>
@@ -166,10 +166,9 @@
 								<div style="text-align: center;">
 									<h6 style="color:#7d7d7d">MORE INFO</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="#">Inuma</a> </p>
-									<p> <a href="#">Amazi</a> </p>
-									<p> <a href="#">Uhira</a> </p>
-									<p> <a href="#">Voma</a> </p>
+									<p ><a href="https://twitter.com/amazirw" style="margin-left:1px;"><i class="fa fa-twitter-square fa-2x" style="color:#00ACEE"></i> Twitter</a> </p>
+									<p><a href="https://web.facebook.com/amazirw?_rdc=1&_rdr" style="margin-left:20px;"><i class="fa fa-facebook-official fa-2x" style="color:#4267B2"></i>  Facebook</a> </p>
+									<p><a href="https://www.instagram.com/amazirw/" style="margin-left:20px;"><i class="fa fa-instagram fa-2x"></i>  Instagram</a> </p>
 								</div>
 							</div>
 						</aside>
