--- a/water_access/static/web/css/betheme.css
+++ b/water_access/static/web/css/betheme.css
@@ -1172,25 +1172,25 @@ body, ul.timeline_items, .icon_box a .desc, .icon_box a:hover .desc, .feature_li
 	fill: #626262;
 }
 .themecolor, .opening_hours .opening_hours_wrapper li span, .fancy_heading_icon .icon_top, .fancy_heading_arrows .icon-right-dir, .fancy_heading_arrows .icon-left-dir, .fancy_heading_line .title, .button-love a.mfn-love, .format-link .post-title .icon-link, .pager-single>span, .pager-single a:hover, .widget_meta ul, .widget_pages ul, .widget_rss ul, .widget_mfn_recent_comments ul li:after, .widget_archive ul, .widget_recent_comments ul li:after, .widget_nav_menu ul, .woocommerce ul.products li.product .price, .shop_slider .shop_slider_ul li .item_wrapper .price, .woocommerce-page ul.products li.product .price, .widget_price_filter .price_label .from, .widget_price_filter .price_label .to, .woocommerce ul.product_list_widget li .quantity .amount, .woocommerce .product div.entry-summary .price, .woocommerce .star-rating span, #Error_404 .error_pic i, .style-simple #Filters .filters_wrapper ul li a:hover, .style-simple #Filters .filters_wrapper ul li.current-cat a, .style-simple .quick_fact .title {
-	color: #009cde;
+	color: #00b4e3;
 }
 .themebg, #comments .commentlist>li .reply a.comment-reply-link, div.jp-interface, #Filters .filters_wrapper ul li a:hover, #Filters .filters_wrapper ul li.current-cat a, .fixed-nav .arrow, .offer_thumb .slider_pagination a:before, .offer_thumb .slider_pagination a.selected:after, .pager .pages a:hover, .pager .pages a.active, .pager .pages span.page-numbers.current, .pager-single span:after, .portfolio_group.exposure .portfolio-item .desc-inner .line, .Recent_posts ul li .desc:after, .Recent_posts ul li .photo .c, .slider_pagination a.selected, .slider_pagination .slick-active a, .slider_pagination a.selected:after, .slider_pagination .slick-active a:after, .testimonials_slider .slider_images, .testimonials_slider .slider_images a:after, .testimonials_slider .slider_images:before, #Top_bar a#header_cart span, .widget_categories ul, .widget_mfn_menu ul li a:hover, .widget_mfn_menu ul li.current-menu-item:not(.current-menu-ancestor)>a, .widget_mfn_menu ul li.current_page_item:not(.current_page_ancestor)>a, .widget_product_categories ul, .widget_recent_entries ul li:after, .woocommerce-account table.my_account_orders .order-number a, .woocommerce-MyAccount-navigation ul li.is-active a, .style-simple .accordion .question:after, .style-simple .faq .question:after, .style-simple .icon_box .desc_wrapper .title:before, .style-simple #Filters .filters_wrapper ul li a:after, .style-simple .article_box .desc_wrapper p:after, .style-simple .sliding_box .desc_wrapper:after, .style-simple .trailer_box:hover .desc, .tp-bullets.simplebullets.round .bullet.selected, .tp-bullets.simplebullets.round .bullet.selected:after, .tparrows.default, .tp-bullets.tp-thumbs .bullet.selected:after {
-	background-color: #009cde;
+	background-color: #00b4e3;
 }
 .Latest_news ul li .photo, .style-simple .opening_hours .opening_hours_wrapper li label, .style-simple .timeline_items li:hover h3, .style-simple .timeline_items li:nth-child(even):hover h3, .style-simple .timeline_items li:hover .desc, .style-simple .timeline_items li:nth-child(even):hover, .style-simple .offer_thumb .slider_pagination a.selected {
-	border-color: #009cde;
+	border-color: #00b4e3;
 }
 a {
-	color: #009cde;
+	color: #00b4e3;
 }
 a:hover {
 	color: #007cc3;
 }
 *::-moz-selection {
-	background-color: #009cde;
+	background-color: #00b4e3;
 }
 *::selection {
-	background-color: #009cde;
+	background-color: #00b4e3;
 }
 .blockquote p.author span, .counter .desc_wrapper .title, .article_box .desc_wrapper p, .team .desc_wrapper p.subtitle, .pricing-box .plan-header p.subtitle, .pricing-box .plan-header .price sup.period, .chart_box p, .fancy_heading .inside, .fancy_heading_line .slogan, .post-meta, .post-meta a, .post-footer, .post-footer a span.label, .pager .pages a, .button-love a .label, .pager-single a, #comments .commentlist>li .comment-author .says, .fixed-nav .desc .date, .filters_buttons li.label, .Recent_posts ul li a .desc .date, .widget_recent_entries ul li .post-date, .tp_recent_tweets .twitter_time, .widget_price_filter .price_label, .shop-filters .woocommerce-result-count, .woocommerce ul.product_list_widget li .quantity, .widget_shopping_cart ul.product_list_widget li dl, .product_meta .posted_in, .woocommerce .shop_table .product-name .variation>dd, .shipping-calculator-button:after, .shop_slider .shop_slider_ul li .item_wrapper .price del, .testimonials_slider .testimonials_slider_ul li .author span, .testimonials_slider .testimonials_slider_ul li .author span a, .Latest_news ul li .desc_footer {
 	color: #a8a8a8;
@@ -1214,7 +1214,7 @@ h6, h6 a, h6 a:hover, a.content_link .title {
 	color: #444444;
 }
 .dropcap, .highlight:not(.highlight_image) {
-	background-color: #009cde;
+	background-color: #00b4e3;
 }
 a.button, a.tp-button {
 	background-color: #f7f7f7;
@@ -1229,25 +1229,25 @@ a.button, a.tp-button {
 	color: #fff;
 }
 a.button_theme, a.tp-button.button_theme, button, input[type="submit"], input[type="reset"], input[type="button"] {
-	background-color: #009cde;
+	background-color: #00b4e3;
 	color: #fff;
 }
 .button-stroke a.button.button_theme:not(.action_button), .button-stroke a.button.button_theme:not(.action_button), .button-stroke a.button.button_theme .button_icon i, .button-stroke a.tp-button.button_theme, .button-stroke button, .button-stroke input[type="submit"], .button-stroke input[type="reset"], .button-stroke input[type="button"] {
-	border-color: #009cde;
-	color: #009cde !important;
+	border-color: #00b4e3;
+	color: #00b4e3 !important;
 }
 .button-stroke a.button.button_theme:hover, .button-stroke a.tp-button.button_theme:hover, .button-stroke button:hover, .button-stroke input[type="submit"]:hover, .button-stroke input[type="reset"]:hover, .button-stroke input[type="button"]:hover {
-	background-color: #009cde !important;
+	background-color: #00b4e3 !important;
 	color: #fff !important;
 }
 a.mfn-link {
 	color: #656B6F;
 }
 a.mfn-link-2 span, a:hover.mfn-link-2 span:before, a.hover.mfn-link-2 span:before, a.mfn-link-5 span, a.mfn-link-8:after, a.mfn-link-8:before {
-	background: #009cde;
+	background: #00b4e3;
 }
 a:hover.mfn-link {
-	color: #009cde;
+	color: #00b4e3;
 }
 a.mfn-link-2 span:before, a:hover.mfn-link-4:before, a:hover.mfn-link-4:after, a.hover.mfn-link-4:before, a.hover.mfn-link-4:after, a.mfn-link-5:before, a.mfn-link-7:after, a.mfn-link-7:before {
 	background: #007cc3;
@@ -1260,25 +1260,25 @@ a.mfn-link-6:before {
 	color: #747474 !important;
 }
 .woocommerce a.button_theme, .woocommerce a.checkout-button, .woocommerce button.button, .woocommerce .button.add_to_cart_button, .woocommerce .button.product_type_external, .woocommerce input[type="submit"], .woocommerce input[type="reset"], .woocommerce input[type="button"], .button-stroke .woocommerce a.checkout-button {
-	background-color: #009cde !important;
+	background-color: #00b4e3 !important;
 	color: #fff !important;
 }
 .column_column ul, .column_column ol, .the_content_wrapper ul, .the_content_wrapper ol {
 	color: #737E86;
 }
 .hr_color, .hr_color hr, .hr_dots span {
-	color: #009cde;
-	background: #009cde;
+	color: #00b4e3;
+	background: #00b4e3;
 }
 .hr_zigzag i {
-	color: #009cde;
+	color: #00b4e3;
 }
 .highlight-left:after, .highlight-right:after {
-	background: #009cde;
+	background: #00b4e3;
 }
 @media only screen and (max-width: 767px) {
 	.highlight-left .wrap:first-child, .highlight-right .wrap:last-child {
-		background: #009cde;
+		background: #00b4e3;
 	}
 }
 #Header .top_bar_left, .header-classic #Top_bar, .header-plain #Top_bar, .header-stack #Top_bar, .header-split #Top_bar, .header-fixed #Top_bar, .header-below #Top_bar, #Header_creative, #Top_bar #menu, .sticky-tb-color #Top_bar.is-sticky {
@@ -1337,7 +1337,7 @@ a.mfn-link-6:before {
 	color: #FFF;
 }
 #Top_bar .search_wrapper {
-	background: #009cde;
+	background: #00b4e3;
 }
 .overlay-menu-toggle {
 	color: #2991d6 !important;
@@ -1388,10 +1388,10 @@ a.mfn-link-6:before {
 	color: #FFF;
 }
 #Footer .themecolor, #Footer .widget_meta ul, #Footer .widget_pages ul, #Footer .widget_rss ul, #Footer .widget_mfn_recent_comments ul li:after, #Footer .widget_archive ul, #Footer .widget_recent_comments ul li:after, #Footer .widget_nav_menu ul, #Footer .widget_price_filter .price_label .from, #Footer .widget_price_filter .price_label .to, #Footer .star-rating span {
-	color: #009cde;
+	color: #00b4e3;
 }
 #Footer .themebg, #Footer .widget_categories ul, #Footer .Recent_posts ul li .desc:after, #Footer .Recent_posts ul li .photo .c, #Footer .widget_recent_entries ul li:after, #Footer .widget_mfn_menu ul li a:hover, #Footer .widget_product_categories ul {
-	background-color: #009cde;
+	background-color: #00b4e3;
 }
 #Footer .Recent_posts ul li a .desc .date, #Footer .widget_recent_entries ul li .post-date, #Footer .tp_recent_tweets .twitter_time, #Footer .widget_price_filter .price_label, #Footer .shop-filters .woocommerce-result-count, #Footer ul.product_list_widget li .quantity, #Footer .widget_shopping_cart ul.product_list_widget li dl {
 	color: #a8a8a8;
@@ -1400,7 +1400,7 @@ a.mfn-link-6:before {
 	color: #CCC;
 }
 #Sliding-top a {
-	color: #009cde;
+	color: #00b4e3;
 }
 #Sliding-top a:hover {
 	color: #007cc3;
@@ -1409,10 +1409,10 @@ a.mfn-link-6:before {
 	color: #FFF;
 }
 #Sliding-top .themecolor, #Sliding-top .widget_meta ul, #Sliding-top .widget_pages ul, #Sliding-top .widget_rss ul, #Sliding-top .widget_mfn_recent_comments ul li:after, #Sliding-top .widget_archive ul, #Sliding-top .widget_recent_comments ul li:after, #Sliding-top .widget_nav_menu ul, #Sliding-top .widget_price_filter .price_label .from, #Sliding-top .widget_price_filter .price_label .to, #Sliding-top .star-rating span {
-	color: #009cde;
+	color: #00b4e3;
 }
 #Sliding-top .themebg, #Sliding-top .widget_categories ul, #Sliding-top .Recent_posts ul li .desc:after, #Sliding-top .Recent_posts ul li .photo .c, #Sliding-top .widget_recent_entries ul li:after, #Sliding-top .widget_mfn_menu ul li a:hover, #Sliding-top .widget_product_categories ul {
-	background-color: #009cde;
+	background-color: #00b4e3;
 }
 #Sliding-top .Recent_posts ul li a .desc .date, #Sliding-top .widget_recent_entries ul li .post-date, #Sliding-top .tp_recent_tweets .twitter_time, #Sliding-top .widget_price_filter .price_label, #Sliding-top .shop-filters .woocommerce-result-count, #Sliding-top ul.product_list_widget li .quantity, #Sliding-top .widget_shopping_cart ul.product_list_widget li dl {
 	color: #a8a8a8;
@@ -1424,14 +1424,14 @@ blockquote, blockquote a, blockquote a:hover {
 	background: rgba(0, 149, 235, 0.8);
 }
 .masonry.tiles .post-item .post-desc-wrapper .post-desc .post-title:after, .masonry.tiles .post-item.no-img, .masonry.tiles .post-item.format-quote, .blog-teaser li .desc-wrapper .desc .post-title:after, .blog-teaser li.no-img, .blog-teaser li.format-quote {
-	background: #009cde;
+	background: #00b4e3;
 }
 .image_frame .image_wrapper .image_links a {
 	color: #FFF;
 }
 .image_frame .image_wrapper .image_links a:hover {
 	background: #FFF;
-	color: #009cde;
+	color: #00b4e3;
 }
 .image_frame {
 	border-color: #f8f8f8;
@@ -1440,88 +1440,88 @@ blockquote, blockquote a, blockquote a:hover {
 	background: rgba(255, 255, 255, 0.4);
 }
 .sliding_box .desc_wrapper {
-	background: #009cde;
+	background: #00b4e3;
 }
 .sliding_box .desc_wrapper:after {
-	border-bottom-color: #009cde;
+	border-bottom-color: #00b4e3;
 }
 .counter .icon_wrapper i {
-	color: #009cde;
+	color: #00b4e3;
 }
 .quick_fact .number-wrapper {
-	color: #009cde;
+	color: #00b4e3;
 }
 .progress_bars .bars_list li .bar .progress {
-	background-color: #009cde;
+	background-color: #00b4e3;
 }
 a:hover.icon_bar {
-	color: #009cde !important;
+	color: #00b4e3 !important;
 }
 a.content_link, a:hover.content_link {
-	color: #009cde;
+	color: #00b4e3;
 }
 a.content_link:before {
-	border-bottom-color: #009cde;
+	border-bottom-color: #00b4e3;
 }
 a.content_link:after {
-	border-color: #009cde;
+	border-color: #00b4e3;
 }
 .get_in_touch, .infobox {
-	background-color: #009cde;
+	background-color: #00b4e3;
 }
 .google-map-contact-wrapper .get_in_touch:after {
-	border-top-color: #009cde;
+	border-top-color: #00b4e3;
 }
 .timeline_items li h3:before, .timeline_items:after, .timeline .post-item:before {
-	border-color: #009cde;
+	border-color: #00b4e3;
 }
 .how_it_works .image .number {
-	background: #009cde;
+	background: #00b4e3;
 }
 .trailer_box .desc .subtitle {
-	background-color: #009cde;
+	background-color: #00b4e3;
 }
 .icon_box .icon_wrapper, .icon_box a .icon_wrapper, .style-simple .icon_box:hover .icon_wrapper {
-	color: #009cde;
+	color: #00b4e3;
 }
 .icon_box:hover .icon_wrapper:before, .icon_box a:hover .icon_wrapper:before {
-	background-color: #009cde;
+	background-color: #00b4e3;
 }
 ul.clients.clients_tiles li .client_wrapper:hover:before {
-	background: #009cde;
+	background: #00b4e3;
 }
 ul.clients.clients_tiles li .client_wrapper:after {
-	border-bottom-color: #009cde;
+	border-bottom-color: #00b4e3;
 }
 .list_item.lists_1 .list_left {
-	background-color: #009cde;
+	background-color: #00b4e3;
 }
 .list_item .list_left {
-	color: #009cde;
+	color: #00b4e3;
 }
 .feature_list ul li .icon i {
-	color: #009cde;
+	color: #00b4e3;
 }
 .feature_list ul li:hover, .feature_list ul li:hover a {
-	background: #009cde;
+	background: #00b4e3;
 }
 .ui-tabs .ui-tabs-nav li.ui-state-active a, .accordion .question.active .title>.acc-icon-plus, .accordion .question.active .title>.acc-icon-minus, .faq .question.active .title>.acc-icon-plus, .faq .question.active .title, .accordion .question.active .title {
-	color: #009cde;
+	color: #00b4e3;
 }
 .ui-tabs .ui-tabs-nav li.ui-state-active a:after {
-	background: #009cde;
+	background: #00b4e3;
 }
 body.table-hover:not(.woocommerce-page) table tr:hover td {
-	background: #009cde;
+	background: #00b4e3;
 }
 .pricing-box .plan-header .price sup.currency, .pricing-box .plan-header .price>span {
-	color: #009cde;
+	color: #00b4e3;
 }
 .pricing-box .plan-inside ul li .yes {
-	background: #009cde;
+	background: #00b4e3;
 }
 .pricing-box-box.pricing-box-featured {
-	background: #009cde;
+	background: #00b4e3;
 }
 input[type="date"], input[type="email"], input[type="number"], input[type="password"], input[type="search"], input[type="tel"], input[type="text"], input[type="url"], select, textarea, .woocommerce .quantity input.qty {
 	color: #626262;
@@ -1534,10 +1534,10 @@ input[type="date"]:focus, input[type="email"]:focus, input[type="number"]:focus,
 	border-color: #d5e5ee;
 }
 .woocommerce span.onsale, .shop_slider .shop_slider_ul li .item_wrapper span.onsale {
-	border-top-color: #009cde !important;
+	border-top-color: #00b4e3 !important;
 }
 .woocommerce .widget_price_filter .ui-slider .ui-slider-handle {
-	border-color: #009cde !important;
+	border-color: #00b4e3 !important;
 }
 @media only screen and (min-width: 768px) {
 	.header-semi #Top_bar:not(.is-sticky) {
